# SIH_obfuscator

./: CMakeLists.txt  CMakeLists_1.txt  README.md  compare_asm.py  obfuscator.cpp  obfuscator_with_bogus_report.cpp  run.sh  run_and_report.sh  run_obf_pipeline.sh  test.c
obfuscation_run/: report.md
obfuscation_run/linux/: test.linux  test.linux.ll  test.linux.obf.ll  test.linux.original
obfuscation_run/windows/: test.windows.ll  test.windows.obf.ll
